--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,8 @@
-*
-!/.envrc
-!/flake.nix
-!/flake.lock
-!*.tex
-!*.md
-!.gitignore
-!LICENSE
-!README.md
-!/.vscode
+*.aux
+*.fdb_latexmk
+*.fls
+*.log
+*.synctex*
+*.toc
+*.pdf
+/.direnv
