Add computer science class of 08/02/2024
Moreover, I changed the latex compiler settings to allow for the use of
`minted` (which is very picky about file naming convetions) and switched
to lualatex

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,5 +8,16 @@
         "parbox",
         "Riesz",
         "surjective"
-    ]
+    ],
+    "latex-workshop.latex.tools": [
+        {
+            "name": "latexmk",
+            "command": "latexmk",
+            "args": [
+                "-lualatex",
+                "-shell-escape",
+                "%DOC%"
+            ]
+        }
+    ],
 }
