--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "injective",
         "Karatsuba's",
         "parbox",
+        "reparametrize",
         "Riesz",
         "subproblems",
         "surjective"
