--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "fonttitle",
         "injective",
         "Karatsuba's",
+        "Parametrizing",
         "parbox",
         "reparametrize",
         "Riesz",
