Add analysis_2 class of 12/02/2024

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "parbox",
         "reparametrize",
         "Riesz",
+        "Schwarz",
         "subproblems",
         "surjective"
     ],
