Add computer_science_2 class of 20/02/2024

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "reparametrize",
         "Riesz",
         "Schwarz",
+        "struct",
         "subproblems",
         "surjective"
     ],
