Add analysis_2 class of 21/02/2024

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "Bezier",
         "bijective",
         "biregular",
         "Borel",
@@ -7,6 +8,7 @@
         "fonttitle",
         "injective",
         "Karatsuba's",
+        "parametrizations",
         "Parametrizing",
         "parbox",
         "reparametrize",
