Add analysis_2 class of 22/02/2024

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Bezier",
         "bijective",
+        "Bilinearity",
         "biregular",
         "Borel",
         "cofactor",
