--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,14 +7,18 @@
         "Borel",
         "cofactor",
         "fonttitle",
+        "heapify",
+        "Heapifying",
         "injective",
         "Karatsuba's",
+        "malloc",
         "parametrizations",
         "Parametrizing",
         "parbox",
         "reparametrize",
         "Riesz",
         "Schwarz",
+        "Schwarzschild",
         "struct",
         "subproblems",
         "surjective"
