Add makefile and analysis of 21/03/2024

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,12 @@
         "biregular",
         "Borel",
         "cofactor",
+        "elif",
+        "fancyhdr",
         "fonttitle",
         "heapify",
         "Heapifying",
+        "Hirschberg's",
         "injective",
         "Karatsuba's",
         "malloc",
