Oops, forgot to add these

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "biregular",
         "Borel",
         "cofactor",
+        "diagonalizable",
         "elif",
         "fancyhdr",
         "fonttitle",
