--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "Borel",
         "cofactor",
         "diagonalizable",
+        "diffeomorphism",
         "elif",
         "fancyhdr",
         "fonttitle",
