Add PHY of 29/04/24
Also introduce `svg` package

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,8 @@
         "Hirschberg's",
         "injective",
         "Karatsuba's",
+        "macrostate",
+        "macrostates",
         "malloc",
         "parametrizations",
         "Parametrizing",
