--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 /.direnv
 /.ruff_cache
+
+**/_minted-*
+/svg-inkscape/
+/build/
+
 *.pdf
 *.aux
 *.log
@@ -11,5 +16,3 @@
 *.dvi
 *.ps
 *.pyg
-**/_minted-*
-svg-inkscape/
