--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,19 +7,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Build LaTeX
-        uses: xu-cheng/latex-action@v3
-        with:
-          root_file: |
-            **/*.tex
-          latexmk_use_lualatex: true
-          latexmk_shell_escape: true
+      - uses: cachix/install-nix-action@v26
+
+      - run: nix build
 
       - name: Upload PDF
         uses: actions/upload-artifact@v4
         with:
-          extra_system_packages: "inkscape" # For svg
           path: |
-            **/*.pdf
+            result/*.pdf
             LICENSE
             README.md
