--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,11 +7,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - uses: cachix/install-nix-action@v26
+      - name: Install nix
+        uses: DeterminateSystems/nix-installer-action@main
+      - name: Updating cache
+        uses: DeterminateSystems/magic-nix-cache-action@main
 
-      - run: nix build
+      - name: Run `nix build`
+        run: nix build
 
-      - name: Upload PDF
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
           path: |
