--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,8 +9,8 @@ jobs:
 
       - name: Install nix
         uses: DeterminateSystems/nix-installer-action@main
-      - name: Updating cache
-        uses: DeterminateSystems/magic-nix-cache-action@main
+     # - name: Updating cache
+     #   uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Run `nix build`
         run: nix build
