--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "Heapifying",
         "Hirschberg's",
         "injective",
+        "interquartile",
         "Karatsuba's",
         "macrostate",
         "macrostates",
