--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "cSpell.words": [
+        "antisymmetry",
         "Bezier",
         "bijective",
         "Bilinearity",
@@ -23,6 +24,7 @@
         "parametrizations",
         "Parametrizing",
         "parbox",
+        "preorder",
         "reparametrize",
         "Riesz",
         "Schwarz",
