Add some physics fixme up

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,6 +29,7 @@
         "Riesz",
         "Schwarz",
         "Schwarzschild",
+        "solenoidals",
         "struct",
         "subproblems",
         "surjective"
