--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,12 +19,16 @@
         "injective",
         "interquartile",
         "Karatsuba's",
+        "Lindelöf",
+        "Lipschitz",
         "macrostate",
         "macrostates",
         "malloc",
         "parametrizations",
         "Parametrizing",
         "parbox",
+        "Peano",
+        "preimage",
         "preorder",
         "Quantiles",
         "reparametrize",
