--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
         "biregular",
         "Borel",
         "boxplot",
+        "Boxplots",
         "cofactor",
         "diagonalizable",
         "diffeomorphism",
