Add decision-theory of 13/09

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,10 +28,14 @@
         "parametrizations",
         "Parametrizing",
         "parbox",
+        "Paretian",
         "Peano",
         "preimage",
         "preorder",
         "Quantiles",
+        "quasiconcave",
+        "Quasiconcavity",
+        "quasiconvexity",
         "reparametrize",
         "Riesz",
         "Schwarz",
