Add some decision-theory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -32,6 +32,7 @@
         "Peano",
         "preimage",
         "preorder",
+        "preorders",
         "Quantiles",
         "quasiconcave",
         "Quasiconcavity",
