--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,7 @@
         "Heapifying",
         "Hirschberg's",
         "injective",
+        "injectivity",
         "interquartile",
         "Karatsuba's",
         "Lindelöf",
@@ -45,6 +46,7 @@
         "struct",
         "subproblems",
         "surjective",
+        "Surjectivity",
         "viceversa"
     ],
     "latex-workshop.latex.tools": [
