Add analysis-3 of 02/10

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,7 @@
         "macrostate",
         "macrostates",
         "malloc",
+        "orthogonalization",
         "parametrizations",
         "Parametrizing",
         "parbox",
