Add some decision-theory

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "diagonalizable",
         "diffeomorphism",
         "elif",
+        "extensionality",
         "fancyhdr",
         "fonttitle",
         "heapify",
@@ -26,6 +27,7 @@
         "macrostate",
         "macrostates",
         "malloc",
+        "ordinality",
         "orthogonalization",
         "parametrizations",
         "Parametrizing",
