Add almost all analysis-3 theorems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "cofactor",
         "diagonalizable",
         "diffeomorphism",
+        "eigenspace",
         "elif",
         "extensionality",
         "fancyhdr",
