Complete analysis-3-theorems

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "diagonalizable",
         "diffeomorphism",
         "eigenspace",
+        "eigenspaces",
         "elif",
         "extensionality",
         "fancyhdr",
