Add more exercises to PS2

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
         "Lipschitz",
         "macrostate",
         "macrostates",
+        "Magnetostatics",
         "malloc",
         "ordinality",
         "orthogonalization",
