Add an3 of 07/11

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -37,6 +37,7 @@
         "parbox",
         "Paretian",
         "Peano",
+        "pointwise",
         "preimage",
         "preorder",
         "preorders",
@@ -51,6 +52,7 @@
         "solenoidals",
         "struct",
         "subproblems",
+        "supremum",
         "surjective",
         "Surjectivity",
         "viceversa"
