Add stats of 12/11

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,6 +9,7 @@
         "boxplot",
         "Boxplots",
         "cofactor",
+        "covariates",
         "diagonalizable",
         "diffeomorphism",
         "eigenspace",
