Add phy2 of 13/11

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,11 @@
 {
     "cSpell.words": [
+        "amperian",
         "antisymmetry",
         "Bezier",
         "bijective",
         "Bilinearity",
+        "Biot",
         "biregular",
         "Borel",
         "boxplot",
@@ -48,6 +50,7 @@
         "quasiconvexity",
         "reparametrize",
         "Riesz",
+        "Savart",
         "Schwarz",
         "Schwarzschild",
         "solenoidals",
