Add some stats (incomplete) and fix typo

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -41,6 +41,7 @@
         "Paretian",
         "Peano",
         "pointwise",
+        "polynomially",
         "preimage",
         "preorder",
         "preorders",
