Add phy2 of 20/11

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
         "elif",
         "extensionality",
         "fancyhdr",
+        "ferromagnets",
         "fonttitle",
         "heapify",
         "Heapifying",
@@ -27,6 +28,7 @@
         "injectivity",
         "interquartile",
         "Karatsuba's",
+        "Lenz",
         "Lindelöf",
         "Lipschitz",
         "macrostate",
