Add phy2 of 25/11
missing some examples

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,7 @@
         "Lipschitz",
         "macrostate",
         "macrostates",
+        "magnetostatic",
         "Magnetostatics",
         "malloc",
         "ordinality",
@@ -51,6 +52,7 @@
         "quasiconcave",
         "Quasiconcavity",
         "quasiconvexity",
+        "quasistatic",
         "reparametrize",
         "Riesz",
         "Savart",
