--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
         uses: DeterminateSystems/magic-nix-cache-action@main
 
       - name: Run `nix build`
-        run: nix build
+        run: nix -Lv build
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
